manifest/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcc-service-ingress
  namespace: group-3-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /service-a
            pathType: Prefix
            backend:
              service:
                name: tcc-service-a-service
                port:
                  number: 80
